--- a/assets/css/mobilestyle.css
+++ b/assets/css/mobilestyle.css
@@ -53,9 +53,10 @@
 }
 
 /* hide label */
-.records-label {
+.help-inline {
 	display: none;
 }
+
 [class^="icon-"],
 [class*=" icon-"] {
 	display: none;
