--- a/assets/css/customstyle.css
+++ b/assets/css/customstyle.css
@@ -1,13 +1,13 @@
 /* My style css */
-/* Karla,Exo,Coda,Voces,Droid Sans   */
-@import "http://fonts.googleapis.com/css?family=Voces";
+/* Karla,Exo,Coda,Voces,Droid Sans,Roboto   */
+@import "http://fonts.googleapis.com/css?family=Roboto";
 /* When using the navbar-top-fixed */ 
 body {
 
 	padding-top: 44px; 
 	padding-bottom: 40px; 
 	background-color: #E8E8E8;	
-	font-family: 'Voces','Arial Narrow',sans-serif
+	font-family: 'Roboto','Arial Narrow',sans-serif
 }
 
 .navbar-fixed-top .navbar-inner, .navbar-static-top .navbar-inner {
@@ -54,6 +54,10 @@ a.menu:after, .dropdown-toggle:after {
 }
 /* hover the dropdown menu   */
 
+.nav-list > li > a {
+    padding: 10px 15px;
+}
+
 #ConfigTitle {
     margin-right: 16px;
     margin-top: 16px;
@@ -73,7 +77,7 @@ a.menu:after, .dropdown-toggle:after {
 	width: 100%;
     background-color: #f5f5f5;
     #background-image: linear-gradient(to top, #FFFFFF, #f5f5f5);
-	border-top: 2px solid #CCCCCC;
+	border-top: 1px solid #CCCCCC;
 	height: 40px;
     margin: 10px 0 0;
 	position: fixed;
@@ -91,7 +95,7 @@ a.menu:after, .dropdown-toggle:after {
 
 .toolbox-top {
 	#background-color: #FAFAFA;
-	margin-top: 2px;
+	margin-top: 1px;
 	margin-bottom: 8px;
 	padding: 6px;
 }
@@ -119,7 +123,7 @@ a.menu:after, .dropdown-toggle:after {
 	position:relative;
 	right:85%;
 	background-color:#f5f5f5; /* column 1 background colour */
-	border-right: 2px solid #CCCCCC;
+	border-right: 1px solid #CCCCCC;
 }
 #overall_container {
 	clear:left;
@@ -128,9 +132,9 @@ a.menu:after, .dropdown-toggle:after {
 	position:relative;
 	overflow:hidden;
 	background-color:#ffffff; /* column 2 background colour */
-	border-right: 2px solid #CCCCCC;
-	border-left: 2px solid #CCCCCC;
-	border-bottom: 2px solid #CCCCCC;
+	border-right: 1px solid #CCCCCC;
+	border-left: 1px solid #CCCCCC;
+	border-bottom: 1px solid #CCCCCC;
 	#box-shadow: 0 5px 5px rgba(51, 51, 51, 0.3);
 	#border-radius: 6px 6px 6px 6px;	
 }
@@ -149,13 +153,13 @@ a.menu:after, .dropdown-toggle:after {
 	position:relative;
 	left:86%;
 	overflow:hidden;
-	padding-bottom: 6px;
+	padding-bottom: 2px;
 
 }
 
 /* content        */
 .content_right {
-	#border-left: 2px solid #CCCCCC;
+	#border-left: 1px solid #CCCCCC;
 }
 
 .content_right_header {
