--- a/assets/css/customstyle.css
+++ b/assets/css/customstyle.css
@@ -13,17 +13,31 @@ body {
 	max-width: 99%;
 }
 .navbar-default {
-	border-color: #000000;
+	/*border-color: #000000;*/
+	border-color: #fbfbfb;
 }
 .navbar-default .navbar-brand {
-    color: #FFFFFF;
+    /*color: #FFFFFF;*/
+	color: #CCCCCC;
 }
+/*
 .navbar {
-	background: #0D0D0D; /* for non-css3 browsers */
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#575757', endColorstr='#0D0D0D'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#575757), to(#0D0D0D)); /* for webkit browsers */
-	background-image: -moz-linear-gradient(center top , #575757 0px, #0D0D0D 100%); /* for firefox 3.6+ */
-	box-shadow: 0 5px 10px rgba(50, 50, 50, 0.5);
+	/*background: #0D0D0D; /* for non-css3 browsers */
+	/*filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#575757', endColorstr='#0D0D0D'); /* for IE */
+	/*background: -webkit-gradient(linear, left top, left bottom, from(#575757), to(#0D0D0D)); /* for webkit browsers */
+	/*background-image: -moz-linear-gradient(center top , #575757 0px, #0D0D0D 100%); /* for firefox 3.6+ */
+	/*box-shadow: 0 5px 10px rgba(50, 50, 50, 0.5);
+}
+*/
+
+.navbar {
+  background-color: #fbfbfb;
+  background-image: -moz-linear-gradient(top, #ffffff, #f5f5f5);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#f5f5f5));
+  background-image: -webkit-linear-gradient(top, #ffffff, #f5f5f5);
+  background-image: -o-linear-gradient(top, #ffffff, #f5f5f5);
+  background-image: linear-gradient(to bottom, #ffffff, #f5f5f5);
+  box-shadow: 0 5px 10px rgba(50, 50, 50, 0.5);
 }
 
 .list-group-item {
