--- a/assets/css/customstyle.css
+++ b/assets/css/customstyle.css
@@ -40,10 +40,10 @@ body {
 #ConfigContent .config-header {
     font-size: 36px;
     font-weight: bold;
-    margin-top: 11px;
+    margin-top: 6px;
     padding: 0 6px 0px;
 	color: #000000;
-/*	border-bottom: 1px solid #CCCCCC;*/
+	border-bottom: 1px solid #CCCCCC;
 }
 
 .footer {
@@ -70,7 +70,6 @@ body {
 	background-color: #FAFAFA;
 	margin-bottom: 8px;
 	padding: 6px;
-	border-top: 1px solid #CCCCCC;
 	border-bottom: 1px solid #CCCCCC;
 }
 
