--- a/assets/css/customstyle.css
+++ b/assets/css/customstyle.css
@@ -28,6 +28,28 @@ body {
 	box-shadow: 0 5px 10px rgba(50, 50, 50, 0.5);
 }
 
+.nav > li > a {
+	text-decoration: none;
+	color: #FFFFFF;
+    display: block;
+    padding: 15px 15px;
+    position: relative;
+}
+
+.nav > li > a:hover , nav > li > a:focus{
+	text-decoration: none;
+	color: #CCCCCC;
+    background-color: #0D0D0D;
+    border-color: #0D0D0D;
+}
+
+.nav .open > a, .nav .open > a:hover, .nav .open > a:focus {'
+	text-decoration: none;
+	color: #FFFFFF;
+    background-color: #0D0D0D;
+    border-color: #0D0D0D;
+}
+
 .list-group-item {
     background-color: transparent ;
 }
