added well to menu

--- a/assets/css/settings.css
+++ b/assets/css/settings.css
@@ -56,6 +56,6 @@ body {
     font-size: 12px;
     font-weight: bold;
 	padding: 10px;
-	background: #CCCCCC;
+	background: #428bca;
 	color: #FFFFFF;
 }
