--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,51 @@ body {
 	font-family: 'Roboto','Arial Narrow',sans-serif;
 	margin-top:60px;
 }
+/*
+ * Sidebar
+ */
+
+/* Hide for mobile, show later */
+.sidebar {
+  display: none;
+}
+@media (min-width: 768px) {
+  .sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    z-index: 1000;
+    display: block;
+    padding: 70px 20px 20px;
+    background-color: #f5f5f5;
+	border-right:1px solid #CCCCCC;
+  }
+}
+
+/* Sidebar navigation */
+.nav-sidebar {
+  margin-left: -20px;
+  margin-right: -21px; /* 20px padding + 1px border */
+  margin-bottom: 20px;	
+}
+.nav-sidebar > li > a {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.nav-sidebar > .active > a {
+  color: #fff;
+  background-color: #428bca;
+}
+
+
+/*
+ * Main content
+ */
+ 
+.main {
+ 
+}
 
 .navbar {
 	background: #0D0D0D; /* for non-css3 browsers */
