small sidebar menu hover fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,10 @@ body {
   color: #fff;
   background-color: #428bca;
 }
+.nav-sidebar > .active > a:hover  {
+  color: #fff;
+  background-color: #428bca;
+}
 
 
 /*
