--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,7 @@ body {
     padding: 70px 20px 20px;
     background-color: #f5f5f5;
 	border-right:1px solid #CCCCCC;
+	/*box-shadow: 0 5px 20px rgba(50, 50, 50, 0.5);	*/
   }
 }
 
