--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,13 +7,31 @@ body {
 	font-family: 'Roboto','Arial Narrow',sans-serif;
 	margin-top:60px;
 }
+
+/*
+ * navbar
+ */
+.navbar {
+	background: #f5f5f5; /* for non-css3 browsers */
+	border-bottom:1px solid #CCCCCC;	
+	
+	/*box-shadow: 0px 5px 10px 0px rgba(204, 204, 204, 0.75);*/
+}
+.icon-bar {
+   background-color:#428bca 
+}
+.
 /*
  * Sidebar
  */
-
 /* Hide for mobile, show later */
 .sidebar {
-  display: none;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    z-index: 1000;
+    display: block;
+    padding: 0px 20px 10px;	
 }
 @media (min-width: 768px) {
   .sidebar {
@@ -24,9 +42,9 @@ body {
     z-index: 1000;
     display: block;
     padding: 70px 20px 20px;
-    background-color: #f5f5f5;
+    background-color: #ffffff;
 	border-right:1px solid #CCCCCC;
-	/*box-shadow: 0 5px 20px rgba(50, 50, 50, 0.5);	*/
+	/*box-shadow:         3px 0px 5px 0px rgba(153, 153, 153, 0.75);*/
   }
 }
 
@@ -52,19 +70,9 @@ body {
 
 /*
  * Main content
- */
- 
+ */ 
 .main {
  
-}
-
-.navbar {
-	background: #0D0D0D; /* for non-css3 browsers */
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#575757', endColorstr='#0D0D0D'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#575757), to(#0D0D0D)); /* for webkit browsers */
-	background-image: -moz-linear-gradient(center top , #575757 0px, #0D0D0D 100%); /* for firefox 3.6+ */
-	
-	box-shadow: 0 5px 10px rgba(50, 50, 50, 0.5);
 }
 
 .alert{
@@ -94,7 +102,6 @@ body {
 #ConfigContent .config-header {
     font-size: 24px;
     font-weight: bold;
-   
 	color: #000000;
 	border-bottom: 1px solid #CCCCCC;
 }
@@ -105,29 +112,6 @@ body {
 	padding: 10px;
 	background: #CCCCCC;
 	color: #FFFFFF;
-}
-/* top toolbox (length-combo and pager) for tables */
-.toolbox-top {
-	background-color: #FAFAFA;
-	margin-bottom: 8px;
-	padding: 6px;
-	border-bottom: 1px solid #CCCCCC;
-}
-
-/* combobox with page length for tables */
-div.toolbox-length select {
-	width: 75px;
-}
-
-.toolbox-info {
-    margin-top: 10px;
-	#background-color: #FAFAFA;	
-	color: #595959;
-	padding: 6px;
-}
-
-.pagination {
-	margin: 0;
 }
 
 .footer {
@@ -144,8 +128,18 @@ div.toolbox-length select {
 
 .copyright{
 	padding-top: 4px; 
-    font-size: 16px;
-    font-weight: bold;
-	color: #999999;
+    font-size: 10x;
+   /*font-weight: bold;*/
+	color: #428bca;
 	text-align: center;
+}
+
+/*datatables*/
+ div.dt_floatleft{
+	 float:left;
+	 white-space:nowrap;
+}
+div.dt_floatright{
+	float:right;
+	white-space:nowrap;
 }
