--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ body {
  * navbar
  */
 .navbar {
-	background: #f5f5f5; /* for non-css3 browsers */
+	background: #f8f8f8; /* for non-css3 browsers */
 	border-bottom:1px solid #CCCCCC;	
 	
 	/*box-shadow: 0px 5px 10px 0px rgba(204, 204, 204, 0.75);*/
@@ -94,15 +94,9 @@ body {
 	background:white;
 }
 
-#ConfigTitle {
-    margin-right: 16px;
-}
-
-#ConfigContent .config-header {
-    font-size: 24px;
-    font-weight: bold;
-	color: #000000;
-	border-bottom: 1px solid #CCCCCC;
+.page-header {
+	margin-top: 8px;
+	font-weight: bold;
 }
 
 .config-sub-header {
