seperated admin pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,7 @@ body {
 .fieldset {
 	margin-top: 0px;
 	padding: 0px;	
-	border-bottom:1px solid #CCCCCC;		
+	border-bottom:1px solid #EEEEEE;		
 } 
 
 #containerSettings {
